backend/spring-boot-app-manifests/deployment-vijay-3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getmyuri-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: getmyuri
  template:
    metadata:
      labels:
        app: getmyuri
    spec:
      imagePullSecrets:
        - name: regcred  #credentials
      containers:
        - name: getmyuri
          # The image tag will be substituted with the Jenkins build number
          image: v370r1/getmyuri:123
          ports:
            - containerPort: 9090
