backend/spring-boot-app-manifests/service-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: getmyuri-service
spec:
  type: NodePort
  selector:
    app: getmyuri
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9090
