backend/spring-boot-app-manifests/service-vijay-2.yml
apiVersion: v1
kind: Service
metadata:
  name: getmyuri-service
spec:
  type: LoadBalancer
  selector:
    app: getmyuri
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
