backend/spring-boot-app-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: getMyURI-backend-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: getMyURI-backend
