backend/spring-boot-app-manifests/ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getmyuri-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: getmyuri-static-ip
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - getmyuri.com
        - www.getmyuri.com
      secretName: www-tls-secret
  rules:
    - host: getmyuri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: getmyuri-service
                port:
                  number: 80
    - host: www.getmyuri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: getmyuri-service
                port:
                  number: 80
