backend/spring-boot-app-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getmyuri-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: getmyuri-static-ip
    networking.gke.io/managed-certificates: getmyuri-cert
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: gce
  rules:
    - host: getmyuri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: getmyuri-service
                port:
                  number: 80
    - host: www.getmyuri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: getmyuri-service
                port:
                  number: 80
